# SWE_4713_Project

./: ReadME.md  auth.py  main.py  pyproject.toml
website/: __init__.py  auth.py  database.db  email.py  models.py  views.py
website/templates/: acc_ledger.html  accountOverview.html  accountView.html  adminPortal.html  approvals.html  balance_sheet.html  base.html  editAccount.html  email_user.html  entry_status.html  event_log.html  help.html  home.html  income_statement.html  login.html  newAccount.html  passwordRecov.html  prepare_entries.html  reset_email.html  reset_verified.html  signUp.html  trial_balance.html  viewAct.html
